# AGMG-Tools

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: Release.yml
Blender/: blender_3dmigoto_plugin.py  main.py
GBT/: Cargo.toml
GBT/src/: main.rs
GBT/src/modules/: archive.rs  build.rs  config.rs  dds.rs  gen_ini.rs  git.rs  linker.rs  mod.rs  scaffold.rs  script.rs  updater.rs  watcher.rs
GBT/src/utils/: copy.rs  dds.rs  download.rs  exec_validation.rs  free_space.rs  ini.rs  interactions.rs  mod.rs  prettify_bytes.rs  requests_timeout.rs  test.rs  version.rs
Scaffold/: Cargo.toml
Scaffold/src/: main.rs
TexGen/: Cargo.toml
TexGen/src/: main.rs
Watcher/: Cargo.toml
Watcher/src/: main.rs
