[package]
name = "gbt"
version = "0.1.0"
edition = "2021"
authors = ["Flamindemigod"]
description = "A Simple Command Line Utility to Scaffold a Project to use within the AGMG Env"
# rustflags = "--no-default-features"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
indicatif = "0.17.7"
lazy_static = "1.4.0"
log = {version = "0.4.20", features = ["release_max_level_warn"] }
minreq = {version = "2.11.0", features= ["https-rustls-probe", "proxy", "json-using-serde"]}
normpath = "1.1.1"
rayon = "1.8.0"
serde = {version = "1.0.189", features = ["derive", "rc"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
stderrlog = {version = "0.5.4", default-features = false}
sysinfo = "0.29.10"
thiserror = "1.0.50"


[features]
default=["timestamps"]
timestamps = ["stderrlog/timestamps"]
