[package]
name = "gbt"
version = "0.1.0"
edition = "2021"
authors = ["Flamindemigod"]
description = "A Simple Command Line Utility to Scaffold a Project to use within the AGMG Env"
# rustflags = "--no-default-features"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
ddsfile = "0.5.1"
derivative = "2.2.0"
dialoguer = "0.11.0"
file_diff = "1.0.0"
filetime = "0.2.22"
fs_extra = "1.3.0"
image = "0.24.7"
image_dds = "0.1.1"
indicatif = "0.17.7"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = {version = "0.4.20", features = ["release_max_level_info"] }
merkle_hash = "3.5.0"
minreq = {version = "2.11.0", features= ["https-rustls-probe", "proxy", "json-using-serde"]}
normpath = "1.1.1"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
rayon = "1.8.0"
regex = "1.10.2"
serde = {version = "1.0.189", features = ["derive", "rc"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
stderrlog = {version = "0.5.4", default-features = false}
subprocess = "0.2.9"
sysinfo = "0.29.10"
thiserror = "1.0.50"
walkdir = "2.4.0"
whoami = "1.4.1"
zip = {version = "0.6.6", features = ["time", "deflate-zlib"]}


[features]
default=["timestamps"]
timestamps = ["stderrlog/timestamps"]
