[package]
name = "watcher"
version = "0.1.0"
edition = "2021"
authors = ["Flamindemigod"]
description = "A Simple Command Line Tool to Rebuild Mod Folders and Relink to use within the AGMG Env"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.6", features = ["derive"]}
ddsfile = "0.5.1"
fs_extra = "1.3.0"
glob = "0.3.1"
globset = "0.4.13"
image = "0.24.7"
image_dds = "0.1.1"
itertools = "0.11.0"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
